--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -2,5 +2,10 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
+}
+
+.error {
+  color: red;
+  margin: 0;
 }
