--- a/src/components/List.css
+++ b/src/components/List.css
@@ -11,6 +11,7 @@
 .list-container li {
   display: flex;
   justify-content: space-between;
+  /* align-items: center; */
   padding: 2rem;
   border-radius: 10px;
   border: 2px solid black;
@@ -18,8 +19,25 @@
   cursor: pointer;
 }
 
-.list-container button {
+.category-name {
+  display: flex;
+  width: 80%;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  overflow: auto;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.delete-button-container {
   border-radius: 10px;
-  opacity: 0.9;
   cursor: pointer;
+  align-self: flex-end;
+}
+
+@media only screen and (max-width: 400px) {
+  .list-container {
+    width: 12rem;
+  }
 }
