--- a/src/components/List.css
+++ b/src/components/List.css
@@ -11,7 +11,6 @@
 .list-container li {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   padding: 2rem;
   border-radius: 10px;
   border: 2px solid black;
@@ -19,7 +18,7 @@
   cursor: pointer;
 }
 
-.category-name {
+/* .category-name {
   display: flex;
   width: 80%;
   word-wrap: break-word;
@@ -28,12 +27,12 @@
   overflow: auto;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
+} */
 
-.delete-button-container {
+.list-container button {
   border-radius: 10px;
+  opacity: 0.9;
   cursor: pointer;
-  align-self: flex-end;
 }
 
 @media only screen and (max-width: 400px) {
