Adjusted body height

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@ body {
   margin: 0 auto;
   background-color: #daecfb;
   font-family: "Roboto", sans-serif;
+  min-height: 90vh;
+  margin-top: 0.5rem;
 }
 
 h1 {
